# mendes

./: .gitignore  CONTEXT.md  Cargo.toml  README.md
assets/: README.md
crates/mendes-cli/: Cargo.toml
crates/mendes-cli/src/: main.rs
crates/mendes-codegen/: Cargo.toml
crates/mendes-codegen/src/: c_backend.rs  lib.rs  llvm_backend.rs  rust_backend.rs
crates/mendes-error/: Cargo.toml
crates/mendes-error/src/: diagnostic.rs  lib.rs  span.rs
crates/mendes-ir/: Cargo.toml
crates/mendes-ir/src/: instruction.rs  lib.rs  lower.rs  module.rs  types.rs
crates/mendes-lexer/: Cargo.toml
crates/mendes-lexer/src/: lexer.rs  lib.rs  token.rs
crates/mendes-parser/: Cargo.toml
crates/mendes-parser/src/: ast.rs  lib.rs  parser.rs
crates/mendes-runtime/: Cargo.toml
crates/mendes-runtime/src/: database.rs  error.rs  http.rs  lib.rs  middleware.rs  router.rs  types.rs  websocket.rs
crates/mendes-semantic/: Cargo.toml
crates/mendes-semantic/src/: checker.rs  lib.rs  ownership.rs  symbols.rs  types.rs
crates/mendes-tests/: Cargo.toml
crates/mendes-tests/src/: lib.rs
docs/: architecture.md  cli-reference.md  examples.md  grammar.md  language-reference.md  runtime-api.md  tutorial.md
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/snippets/: mendes.json
editors/vscode/syntaxes/: mendes.tmLanguage.json
examples/: break_continue.ms  builtins.ms  closures.ms  codegen_test.ms  control_flow.ms  crud_api.ms  enums.ms  for_loop.ms  generics.ms  hello.ms  minimal.ms  ownership_test.ms  pattern_matching.ms  ranges.ms  result_test.ms  string_interpolation.ms  struct_methods.ms  traits.ms  try_operator.ms  tuples.ms  type_alias.ms  utils.ms  websocket.ms  with_import.ms
examples/imports/: main.ms  math.ms
