[workspace]
resolver = "2"

members = [
    "crates/mendes-error",
    "crates/mendes-lexer",
    "crates/mendes-parser",
    "crates/mendes-semantic",
    "crates/mendes-ir",
    "crates/mendes-codegen",
    "crates/mendes-cli",
    "crates/mendes-runtime",
    "crates/mendes-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Guilherme Mendes"]
license = "MIT"
repository = "https://github.com/guilhermemendes/linguagem-mendes"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "1.0"
unicode-xid = "0.2"
logos = "0.14"
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "mysql", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
parking_lot = "0.12"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1.7", features = ["v4"] }
