[package]
name = "mendes-ir"
description = "Representação intermediária da linguagem Mendes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mendes-error = { path = "../mendes-error" }
mendes-parser = { path = "../mendes-parser" }

[dev-dependencies]
mendes-lexer = { path = "../mendes-lexer" }
