[package]
name = "mendes-lexer"
description = "Lexer/Tokenizador da linguagem Mendes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mendes-error = { path = "../mendes-error" }
unicode-xid.workspace = true
logos.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
