[package]
name = "mendes-parser"
description = "Parser da linguagem Mendes - converte tokens em AST"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mendes-error = { path = "../mendes-error" }
mendes-lexer = { path = "../mendes-lexer" }
